        * Resource not present is treated as a precondition fail
    * `LoadCallback` now returns `std::expected<T, dgm::Error>` instead of having an inout T parameter
        * Resources no longer have to be default-constructible (yay, RAII), but they have to be movable
        * Two moves are issued per resource load, but that's a price I am willing to pay for RAII
    * All `dgm::Utility::load*` functions have been adjusted
    * `dgm::ParticleSystemInterface` is now explicit
 * Previously deprecated default constructors were removed (`dgm::Clip`, `dgm::TileMap`, `dgm::Path`)
 * Moved `PreallocatedMemoryAmount` from `dgm::DynamicBuffer` template parameters to the constructor parameters
    * Also made the whole thing explicit
 * Added examples
    * `example-08-pathfinding` showcasing `dgm::NavMesh`
    * `example-09-collisions` showcasing `dgm::Collision`
    * `example-10-camera-minimap` showcasing how to use multiple `dgm::Camera` objects
    * `example-11-appstate` showcasing how to use `dgm::App` and implement custom `dgm::AppState` derivates
 * Default constructor of `dgm::Animation` was removed
 * `dgm::Animation` is nodiscard and final, most of the interface is noexcept
 * `dgm::Time` is nodiscard
 * `dgm::Window::getWindowContext` renamed to `getSfmlWindowContext`
 * `dgm::Window::beginDraw` renamed to `clear`
 * `dgm::Window::endDraw` renamed to `display`
 * `dgm::Controller` completely revamped
    * No longer dependent on xinput
    * `getInputValue`/`isInputToggled` replaced with `readAnalog`/`readDigital`
    * `update` method was removed
    * bindings for supported gamepads can be resolved via `translateGamepadCode` function
 * Compilation for Android is supported
 * SFML bumped to v3.0.0
	* `dgm::Camera` dropped all methods that used separate x, y coordinates in favor of `sf::Vector` versions
	* `setRotation`/`rotateGradually` now accepts `sf::Angle` instead of float