@@ -14,6 +14,7 @@ dgm-lib v3.0.0
     * `LoadCallback` now returns `std::expected<T, dgm::Error>` instead of having an inout T parameter
         * Resources no longer have to be default-constructible (yay, RAII), but they have to be movable
         * Two moves are issued per resource load, but that's a price I am willing to pay for RAII
+    * `loadResourcesFromDirectory` is no longer recursive because Android NDK is shit
     * All `dgm::Utility::load*` functions have been adjusted
     * `dgm::ParticleSystemInterface` is now explicit
  * Previously deprecated default constructors were removed (`dgm::Clip`, `dgm::TileMap`, `dgm::Path`)
